# lanturn

./: .gitignore  .gitmodules  LICENSE  Lanturn_esp32_gemini_live_alt_bot.py  Lanturn_esp32_gemini_live_vision_bot.py  README.md  env.example  gemini_esp32_vision_bot.py  main.py  pyproject.toml
esp32/pipecat-esp32/esp32-m5stack-atoms3r/: sdkconfig.defaults
esp32/pipecat-esp32/esp32-m5stack-atoms3r/src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  main.h
pipecat/src/pipecat/transports/smallwebrtc/: connection.py
